# llvm-project

clang/include/clang/AST/: OpenMPClause.h  RecursiveASTVisitor.h
clang/include/clang/Basic/: OpenMPKinds.def
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: Sema.h
clang/lib/AST/: OpenMPClause.cpp  StmtProfile.cpp
clang/lib/Basic/: OpenMPKinds.cpp  Targets.cpp
clang/lib/CodeGen/: CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGStmtOpenMP.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Parse/: ParseOpenMP.cpp
clang/lib/Sema/: SemaOpenMP.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTWriter.cpp
clang/tools/libclang/: CIndex.cpp
llvm/include/llvm/ADT/: Triple.h
llvm/lib/Support/: Triple.cpp
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/include/: omptarget.h
openmp/libomptarget/plugins/: CMakeLists.txt
openmp/libomptarget/plugins/alveo/: CMakeLists.txt
openmp/libomptarget/plugins/alveo/src/: rtl.cpp
openmp/libomptarget/plugins/alveo/src/util/: alveo_generic_app.cpp  alveo_generic_app.h  utils.cpp  utils.h
openmp/libomptarget/plugins/common/: elf_common.c
